src/objects/TR1__Candidate_Availability__c.object
<CustomObject>
    <description>Object to store the availability of a candidate for a start to end date.</description>
    <fields>
        <fullName>TR1__Applicable_Days__c</fullName>
        <label>Applicable Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Availabilities</relationshipLabel>
        <relationshipName>CandidateAvailabilitys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Candidate Availabilities</relationshipLabel>
        <relationshipName>Candidate_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                    <default>true</default>
                    <label>Full Day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                    <color>#FF6600</color>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                    <color>#FFCC33</color>
                    <label>Tentative</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Working for Another Agency</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In a Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to capture the vacancy schedule</description>
        <label>Vacancy Schedule Details</label>
        <referenceTo>TR1__Vacancy_D2D__c</referenceTo>
        <relationshipLabel>Candidate Availabilities</relationshipLabel>
        <relationshipName>Candidate_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Work_shift_location_lkld__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work shift location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidate Availabilities (Workshift location lkld)</relationshipLabel>
        <relationshipName>Candidate_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Candidate Availability</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Candidate__c</columns>
        <columns>TR1__Start_Date_Time__c</columns>
        <columns>TR1__End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>CA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TR1__EndDate_Time_Greater_Than_StartDate_Time</fullName>
        <active>false</active>
        <description>Should not be able to create a candidate availability record by giving end date time less than start date time</description>
        <errorConditionFormula>OR(AND(OR( ISNEW() ,ISCHANGED(TR1__End_Date_Time__c ) ), TR1__End_Date_Time__c  &lt;=  TR1__Start_Date_Time__c),
AND(OR( ISNEW() ,ISCHANGED(TR1__End_Date__c ) ),
TR1__End_Date__c  &lt;  TR1__Start_Date__c))</errorConditionFormula>
        <errorMessage>End Date Time/ End Date Should Be Greater Than Start Date Time/Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Start_Date_Time_Not_Past_Value</fullName>
        <active>false</active>
        <description>Should not be able to create a record by giving start date time as past value</description>
        <errorConditionFormula>OR(AND(OR( ISNEW() ,ISCHANGED(TR1__Start_Date_Time__c) ), DATEVALUE( TR1__Start_Date_Time__c ) &lt; TODAY()),
AND(OR( ISNEW() ,ISCHANGED(TR1__Start_Date__c) ),
TR1__Start_Date__c  &lt; TODAY()))</errorConditionFormula>
        <errorMessage>Start Date time or Start Date should not be in past</errorMessage>
    </validationRules>
</CustomObject>